Fix {bz: 4576} - modify z-index

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -4591,7 +4591,7 @@ ul.dropdownOptions li.disabled a:hover {
 .attachmentPopup, .weblinkPopup, .wikilinkPopup {
     position: absolute;
     background-color: #fff;
-    z-index: 1000;
+    z-index: 3000;
     margin: 1px 5% 0px 5%;
     padding: 5px;
     text-align: left;
